Fixed nexted tier logic and side panel spacing

--- a/css/main.css
+++ b/css/main.css
@@ -141,7 +141,7 @@ td {
 	padding-right: 10px;
 	padding-top: 27px;
 	padding-bottom: 27px;
-	width: 100%;
+	width: calc(100% - 300px);
 }
 
 .timeBlock {
@@ -430,19 +430,17 @@ a.tooltip:hover span {
 	display: block;
 	color: black;
 	background-color: #ffffff;
-	font-size: 20px;
+	font-size: 16px;
 	border: 1px solid black;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-	border-radius: 10px; 
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px; 
 }
 
 /*
 table, th, td{
     border: 1px solid black;
 }*/
-
-
 
 /* Sentence Flexbox Container Styles */
 
@@ -465,6 +463,7 @@ table, th, td{
 	margin-top: 3px;
 	margin-bottom: 5px;
 	padding-left: 9px;
+	text-wrap: wrap;
 }
 
 .depItem{
